# ai-dataplatform-ops

./: Makefile  README.md
docs/: 从零部署到生产-分阶段落地路径.md  功能需求文档-PRD.md
docs/Implementation-details/: 00-实现细节总览与模块规划.md  01-项目工程化基础与代码结构.md  02-LLM客户端与多模型路由.md  03-Agent核心框架与状态机.md  04-Triage-Agent与智能分流.md  05-Diagnostic-Agent与根因分析.md  06-Planning-Remediation-Agent.md  07-Patrol-Alert-Correlation-Agent.md  08-Report-Agent与知识沉淀.md  09-MCP-Server实现.md  10-MCP中间件链.md  11-MCP客户端与工具注册.md  12-RAG检索引擎.md  13-Graph-RAG与知识图谱.md  14-文档处理与索引管线.md  15-HITL人机协作系统.md  16-安全防护四层体系.md  17-可观测性与全链路追踪.md  18-评估体系与质量门禁.md  19-数据采集与流处理.md  20-部署CICD与运维.md
docs/production-design/: 01-系统总体架构与设计理念.md  02-数据采集与集成层设计.md  03-智能诊断Agent系统设计.md  04-RAG知识库与运维知识管理.md  05-可观测性与全链路追踪设计.md  06-安全防护与生产落地难点.md  07-部署架构与CICD流水线.md  08-工程化落地难点补充分析.md  生产级差距分析与路线图.md
eval/: gate_config.yaml
go/: .golangci.yml  Makefile  go.mod  go.sum
python/: conftest.py  pyproject.toml
python/src/aiops/: __init__.py
python/src/aiops/agent/: __init__.py  base.py  compressor.py  graph.py  router.py  state.py
python/src/aiops/agent/nodes/: __init__.py  alert_correlation.py  diagnostic.py  direct_tool.py  hitl_gate.py  knowledge_sink.py  patrol.py  planning.py  remediation.py  report.py  triage.py
python/src/aiops/core/: __init__.py  config.py  context.py  errors.py  logging.py  types.py
python/src/aiops/eval/: __init__.py  ab_test.py  auto_discovery.py  continuous_eval.py  deepeval_eval.py  gate_check.py  llm_judge.py  ragas_eval.py  runner.py
python/src/aiops/hitl/: __init__.py  gate.py  notification.py  risk.py  workflow.py
python/src/aiops/llm/: __init__.py  budget.py  cache.py  client.py  cost.py  providers.py  router.py  schemas.py  types.py
python/src/aiops/mcp_client/: __init__.py  client.py  discovery.py  registry.py
python/src/aiops/observability/: __init__.py  badcase.py  langfuse.py  metrics.py  tracing.py
python/src/aiops/prompts/: __init__.py  diagnostic.py  planning.py  triage.py
python/src/aiops/rag/: __init__.py  dense.py  graph_rag.py  indexer.py  processor.py  reranker.py  retriever.py  sparse.py  types.py
python/src/aiops/security/: __init__.py  injection.py  rbac.py  sensitive.py
python/src/aiops/web/: __init__.py  app.py
python/src/aiops/web/middleware/: metrics.py
python/src/aiops/web/routes/: agent.py  approval.py  health.py  tools.py
python/tests/integration/: conftest.py  test_e2e.py
python/tests/unit/: test_supplement.py
python/tests/unit/agent/: __init__.py  test_sprint3.py  test_sprint456.py
python/tests/unit/core/: test_config.py  test_context.py  test_errors.py  test_types.py
python/tests/unit/llm/: __init__.py  test_router.py
python/tests/unit/mcp/: __init__.py  test_registry.py
scripts/: demo.py
(+81 files in other folders)
