[tool.poetry]
name = "aiops-agent"
version = "0.1.0"
description = "AI-Powered Big Data Platform Intelligent Operations System"
authors = ["AIOps Team"]
packages = [{include = "aiops", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# === Agent 框架 ===
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"

# === LLM ===
instructor = "^1.4.0"
litellm = "^1.40.0"
openai = "^1.50.0"

# === RAG ===
pymilvus = "^2.4.0"
elasticsearch = "^8.12.0"
neo4j = "^5.20.0"
sentence-transformers = "^3.0.0"

# === Web ===
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^12.0"

# === 可观测 ===
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp = "^1.25.0"
langfuse = "^2.40.0"
prometheus-client = "^0.21.0"

# === 基础 ===
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
structlog = "^24.2.0"
httpx = "^0.27.0"
redis = "^5.0.0"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
apscheduler = "^3.10.0"
tenacity = "^8.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
ipython = "^8.25.0"

[tool.poetry.group.eval.dependencies]
ragas = "^0.1.10"
deepeval = "^0.21.0"

[tool.poetry.scripts]
aiops = "aiops.cli:main"

# === Ruff 配置 ===
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "SIM",          # flake8-simplify
    "TCH",          # flake8-type-checking
    "RUF",          # ruff-specific
]
ignore = ["E501"]   # line-length 由 ruff format 控制

[tool.ruff.lint.isort]
known-first-party = ["aiops"]

# === Mypy 配置 ===
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langfuse.*", "pymilvus.*"]
ignore_missing_imports = true

# === Pytest 配置 ===
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require external services)",
    "security: Security tests (prompt injection, etc.)",
    "slow: Slow tests (LLM calls, indexing, etc.)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
